lesson_3/k8s/I_flask-deployment.yaml
# 4.7 Deploy the Flask application and expose it as a service.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask
  namespace: lesson-three-proj
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - name: flask
        image: ronben2311/flask-app:latest  # Corrected image name to match Docker Hub repository
        ports:
        - containerPort: 5000
