lesson_3/k8s/flask-deployment.yaml
# 4.7 Deploy the Flask application and expose it as a service.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask
  namespace: lessonThreeProj
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - name: flask
        image: flask-image  # Replace with your Flask Docker image
        ports:
        - containerPort: 5000
