lesson_3/k8s/M_flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: lesson-three-proj
spec:
  type: NodePort  # Change this to NodePort
  selector:
    app: flask
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
    nodePort: 30007  # Optional: specify a custom port if needed (range: 30000-32767)
