lesson_3/k8s/postgres-deployment.yaml
# 4.5 Deploy PostgreSQL and expose it as a service.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: lesson-three-proj  # Make sure the namespace matches your Secret's namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:13
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
        - name: postgres-init-script
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pvc
      - name: postgres-init-script
        configMap:
          name: postgres-init-config
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: lesson-three-proj  
spec:
  ports:
  - port: 5432
  selector:
    app: postgres
