lesson_3/k8s/redis-deployment.yaml
# Deploy Redis and expose it as a service.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: lesson-three-proj
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:alpine
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: lesson-three-proj
spec:
  ports:
  - port: 6379
  selector:
    app: redis
