lesson_3/k8s/network-policy.yaml
# 5.2 Define NetworkPolicies to restrict traffic between pods
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: lessonThreeDB
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
